greet_app/deploy/greet_app_svc.yaml
apiVersion: v1
kind: Service
metadata:
  labels:
    app: greet-app-svc
  name: greet-app-svc
spec:
  ports:
    - port: 50059
      protocol: TCP
      targetPort: 50059
  selector:
    app: greet-app-pod
  type: ClusterIP
